[package]
name = "dropbox-sdk"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@dropbox.com>"]

[dependencies]
error-chain = "0.9"
hyper = { version = "0.10", optional = true }
hyper-native-tls = { version = "0.2", optional = true }
log = "0.3"
serde = "1.0"
serde_json = "1.0"
url = "1.5"

[dev-dependencies]
env_logger = "0.4"

[[example]]
name = "demo"
required-features = ["dbx_files", "hyper_client"]

[features]
# dbx_* features each correspond to one Stone spec file.
# The lists of dependencies must be kept in sync with the 'import' statements in them.
dbx_async = []
dbx_auth = ["dbx_common"]
dbx_common = []
dbx_file_properties = []
dbx_file_requests = ["dbx_common", "dbx_files"]
dbx_files = ["dbx_async", "dbx_auth", "dbx_common", "dbx_file_properties", "dbx_users_common"]
dbx_paper = ["dbx_common", "dbx_sharing"]
dbx_shared_content_links = ["dbx_common"]
dbx_shared_links = ["dbx_common", "dbx_files", "dbx_users"]
dbx_sharing = ["dbx_common", "dbx_files", "dbx_users"]
dbx_sharing_files = ["dbx_common", "dbx_files", "dbx_users"]
dbx_sharing_folders = ["dbx_async", "dbx_common", "dbx_files", "dbx_team_common", "dbx_users_common"]
dbx_team = ["dbx_common", "dbx_file_properties", "dbx_team_common", "dbx_team_policies", "dbx_users_common"]
dbx_team_common = ["dbx_common"]
dbx_team_devices = ["dbx_common"]
dbx_team_folders = ["dbx_async", "dbx_common"]
dbx_team_groups = ["dbx_async", "dbx_team_common"]
dbx_team_linked_apps = ["dbx_common"]
dbx_team_log = ["dbx_async", "dbx_team", "dbx_team_common", "dbx_users_common"]
dbx_team_log_generated = ["dbx_async", "dbx_common", "dbx_team_common", "dbx_users_common", "dbx_files", "dbx_team_policies"]
dbx_team_member_space_limits = []
dbx_team_members = ["dbx_async", "dbx_users", "dbx_common", "dbx_team_common"]
dbx_team_namespaces = ["dbx_common", "dbx_team_common"]
dbx_team_policies = []
dbx_team_reports = ["dbx_common"]
dbx_users = ["dbx_common", "dbx_team_policies", "dbx_users_common"]
dbx_users_common = ["dbx_common"]

hyper_client = ["hyper", "hyper-native-tls"]

# Include everything by default.
default = [
    "dbx_async",
    "dbx_auth",
    "dbx_common",
    "dbx_file_properties",
    "dbx_file_requests",
    "dbx_files",
    "dbx_paper",
    "dbx_shared_content_links",
    "dbx_shared_links",
    "dbx_sharing",
    "dbx_sharing_files",
    "dbx_sharing_folders",
    "dbx_team",
    "dbx_team_common",
    "dbx_team_devices",
    "dbx_team_folders",
    "dbx_team_groups",
    "dbx_team_linked_apps",
    "dbx_team_log",
    "dbx_team_log_generated",
    "dbx_team_member_space_limits",
    "dbx_team_members",
    "dbx_team_namespaces",
    "dbx_team_policies",
    "dbx_team_reports",
    "dbx_users",
    "dbx_users_common",
    "hyper_client",
    ]
